--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.42.1"
+    "react-icons": "^4.2.0",
+    "sass": "^1.42.1",
+    "stripe": "^8.178.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.3"
