--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
+    "faunadb": "^4.4.1",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
