--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.19.1",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
+    "axios": "^0.22.0",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
